Fix T65005: Missing "LINES_ADJ" and "TRIS_ADJ" in the GPU Python API.